--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<head>
+  <title>notnotkenetic</title>
+</head>
+<body>
+  <li>
+    <a href="https://notkenetic.github.io/ovo3.html">OvO 3</a>
+    <a href="https://notkenetic.github.io/cookieclicker.html">Cookie Clicker</a>
+    <a href="https://notkenetic.github.io/1.8.html">1.8 MC</a>
+    <a href="https://notkenetic.github.io/1.5.html">1.5 MC</a>
+    <a href="https://notkenetic.github.io/slope.html">Slope</a>
+  </li>
+</body>
