--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
   <title>notnotkenetic</title>
 </head>
 <body>
-  <li>
-    <a href="https://notkenetic.github.io/ovo3.html">OvO 3</a>
-    <a href="https://notkenetic.github.io/cookieclicker.html">Cookie Clicker</a>
-    <a href="https://notkenetic.github.io/1.8.html">1.8 MC</a>
-    <a href="https://notkenetic.github.io/1.5.html">1.5 MC</a>
-    <a href="https://notkenetic.github.io/slope.html">Slope</a>
-  </li>
+    <li><a href="https://notkenetic.github.io/ovo3.html">OvO 3</a></li>
+    <li><a href="https://notkenetic.github.io/cookieclicker.html">Cookie Clicker</a></li>
+    <li><a href="https://notkenetic.github.io/1.8.html">1.8 MC</a></li>
+    <li><a href="https://notkenetic.github.io/1.5.html">1.5 MC</a></li>
+  <li><a href="https://notkenetic.github.io/slope.html">Slope</a></li>
 </body>
