--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
     <li><a href="https://notkenetic.github.io/1.8.html">1.8 MC</a></li>
     <li><a href="https://notkenetic.github.io/1.5.html">1.5 MC</a></li>
   <li><a href="https://notkenetic.github.io/slope.html">Slope</a></li>
+  <li><a href="https://dddavit.github.io/subway/">Subways</a></li>
 </body>
