--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
     <li><a href="https://notkenetic.github.io/1.5.html">1.5 MC</a></li>
   <li><a href="https://notkenetic.github.io/slope.html">Slope</a></li>
   <li><a href="https://dddavit.github.io/subway/">Subways</a></li>
+  <li><a href="https://www.construct.net/en/free-online-games/tag-39/play">Tag</a></li>
 </body>
